WIP: features, classifier

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,9 @@ python_requires = >=3.7
 include_package_data = True
 packages = find:
 install_requires = 
+    joblib
+    pagexml-tools
+    scikit-learn
     spylls
 
 [options.data_files]
