Disable next_steps and markdown-link-check jobs.

--- a/.github/workflows/markdown-link-check.yml
+++ b/.github/workflows/markdown-link-check.yml
@@ -11,6 +11,7 @@ on:
 jobs:
 
   markdown-link-check:
+    if: ${{ false }}  # disable for now
     name: Check markdown links
     runs-on: ubuntu-latest
     steps:
