Migrate license to GPLv3.

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ author_email = c.schnober@esciencecenter.nl
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
-    License :: OSI Approved :: Apache Software License
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Natural Language :: English
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
