--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,9 @@ install_requires =
 # It remains empty for now
 # Check if MANIFEST.in works for your purposes
 
+[options.package_data]
+text_quality = data/**/*
+
 [options.extras_require]
 dev =
     bump2version
