--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ include_package_data = True
 packages = find:
 install_requires = 
     joblib
+    pandas
     pagexml-tools
     scikit-learn
     spylls
