Fix Sonar projectKey.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.organization=laHTeR
-sonar.projectKey=laHTeR_htr-quality-classifier
+sonar.projectKey=LAHTeR_htr-quality-classifier
+sonar.organization=lahter
 sonar.host.url=https://sonarcloud.io
 sonar.sources=text_quality/
 sonar.tests=tests/
