Add text_quality.py script to package.

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,8 @@ install_requires =
     pagexml-tools
     scikit-learn
     spylls
+scripts =
+    scripts/text_quality.py
 
 [options.data_files]
 # This section requires setuptools>=40.6.0
