Rename text_quality script to resolve script/module naming ambiguity.

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,8 +38,9 @@ install_requires =
     pagexml-tools
     scikit-learn
     spylls
+    tqdm
 scripts =
-    scripts/text_quality.py
+    scripts/classify_text_quality.py
 
 [options.data_files]
 # This section requires setuptools>=40.6.0
