Pin dependecy versions; add note about warnings; use HTTPS URL in README. #1

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,12 +33,12 @@ python_requires = >=3.9
 include_package_data = True
 packages = find:
 install_requires = 
-    joblib
-    pandas
-    pagexml-tools
-    scikit-learn
-    spylls
-    tqdm
+    joblib==1.2.0
+    pandas==1.5.3
+    pagexml-tools==0.3.1
+    scikit-learn==1.2.1
+    spylls==0.1.7
+    tqdm==4.65.0
 scripts =
     scripts/classify_text_quality.py
 
