--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@
 author = Carsten Schnober
 author_email = c.schnober@esciencecenter.nl
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     Intended Audience :: Developers
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Natural Language :: English
