--- a/setup.cfg
+++ b/setup.cfg
@@ -23,8 +23,8 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 name = text_quality
 project_urls =
-    Bug Tracker = git@github.com:laHTeR/htr-quality-classifier/issues
-url = git@github.com:laHTeR/htr-quality-classifier
+    Bug Tracker = https://github.com/laHTeR/htr-quality-classifier/issues
+url = https://github.com/laHTeR/htr-quality-classifier
 version = 0.1.3
 
 [options]
