--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ install_requires =
     scikit-learn==1.2.1
     spylls==0.1.7
     tqdm==4.65.0
+    openpyxl~=3.1.2
 scripts =
     scripts/classify_text_quality.py
 
