--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ python_requires = >=3.9
 include_package_data = True
 packages = find:
 install_requires = 
+    fasttext-wheel~=0.9.2
     joblib==1.2.0
     pandas==1.5.3
     pagexml-tools==0.3.3
